--- a/templates/modern-sans.tex
+++ b/templates/modern-sans.tex
@@ -38,6 +38,8 @@ $endif$
 \titlespacing*{\subsection}{0pt}{2.2ex plus 0.5ex}{0.8ex}
 \setlength{\parskip}{0.9em}
 \setlength{\parindent}{0pt}
+\setlength{\headheight}{16pt}
+\setlength{\headsep}{0.3in}
 \setlist[itemize]{label=\textbullet,leftmargin=1.4em,itemsep=0.4em}
 \setlist[enumerate]{leftmargin=1.6em,itemsep=0.3em}
 \pagestyle{fancy}
