--- a/templates/notebook.tex
+++ b/templates/notebook.tex
@@ -46,6 +46,8 @@ $endif$
 \titlespacing*{\subsection}{0pt}{2.3ex plus 0.8ex}{0.8ex}
 \setlength{\parskip}{0.8em}
 \setlength{\parindent}{0pt}
+\setlength{\headheight}{16pt}
+\setlength{\headsep}{0.3in}
 \setlist[itemize]{label=--,leftmargin=1.2em,itemsep=0.3em}
 \setlist[enumerate]{leftmargin=1.4em,itemsep=0.3em}
 \pagestyle{fancy}
