--- a/templates/press-release.tex
+++ b/templates/press-release.tex
@@ -31,6 +31,8 @@ $endif$
 \setstretch{1.2}
 \setlength{\parskip}{0.7em}
 \setlength{\parindent}{0pt}
+\setlength{\headheight}{16pt}
+\setlength{\headsep}{0.3in}
 \titleformat{\section}
   {\normalfont\Large\bfseries\color{prPrimary}}
   {\thesection}{1em}{}
