--- a/templates/tech-report.tex
+++ b/templates/tech-report.tex
@@ -31,6 +31,8 @@ $endif$
 \setstretch{1.18}
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{0.75em}
+\setlength{\headheight}{16pt}
+\setlength{\headsep}{0.3in}
 \titleformat{\section}
  {\normalfont\Large\bfseries\color{trPrimary}}
  {\fcolorbox{trAccent}{trAccent!15}{\color{trAccent}\thesection}}{0.75em}{}
